tests/baselines/reference/parserSkippedTokens13.errors.txt
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens13.ts(1,10): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens13.ts (1 errors) ====
    /regexp/ \ ;
             
!!! error TS1127: Invalid character.